feat: adiciona aria-label no botão de limpar e reutiliza a função hideAllMessages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <button type="submit" class="btn" aria-label="Validar e-mail">
             Check
           </button>
-          <button type="button" class="btn outline">Clear Field</button>
+          <button type="button" class="btn outline" aria-label="Limpar campo de e-mail">Clear Field</button>
         </form>
       </div>
       <script src="src/index.js"></script>
